--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,7 @@
 {
+  "files": [],
   "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.node.json"
-    }
-  ],
-  "compilerOptions": {
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "jsx": "react-jsx",
-    "types": [
-      "react",
-      "react-dom"
-    ],
-    "paths": {
-      "react": ["./node_modules/@types/react"]
-    }
-  }
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ]
 }
