--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "untitled2",
+  "name": "reactTest",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build"
   },
   "homepage": "https://Anesthesia92.github.io/reactmakves",
   "dependencies": {
